yaml/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: healthapp
  name: healthapp
spec:
  ports:
  - name: web # This port is named `web`...
    port: 80  # ... and should be exposed on port 80, ...
    protocol: TCP # ... using TCP ...
    targetPort: 3000 # ... to expose port 8000 of internal pods ...
  selector: # ... designated by the selector 'hello' ...
    app: healthapp
  type: ClusterIP # ... to an internal cluster IP address
