yaml/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    service: flask
spec:
  ports:
  - port: 80  # ... and should be exposed on port 80, ...
    protocol: TCP # ... using TCP ...
    targetPort: 5000 # ... to expose port 8000 of internal pods ...
  selector: # ... designated by the selector 'hello' ...
    app: flask
  type: ClusterIP # ... to an internal cluster IP address
