yaml/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations: # This is information to the Ingress modules of kubernetes, to note that you want the endpoint publicly accessible.
    kubernetes.io/ingress.class: nginx-public
  name: healthapp
  labels:
    app: healthapp
spec:
  rules:
    - host: tddc88-company-2-2020.kubernetes-public.it.liu.se
      http:
        paths:
        - path: /api/
          backend:
            serviceName: flask
            servicePort: 5000
        - path: /
          backend:
            serviceName: healthapp
            serviecPort: 80
